[package]
name = "chefctl"
version = "0.1.0"
authors = ["Dan Sedlacek <dansedlacek@fb.com>"]
edition = "2018"

[dependencies]
actix-web = "~0.7"
chrono = "~0.4.6"
clap = "~2.32.0"
ctrlc = { version = "~3.0", features = ["termination"] }
lazy_static = "~1.2.0"
rand = "~0.6.1"
regex = "~1"
serde = "~1.0.84"
serde_derive = "~1.0.84"
serde_json = "~1.0.34"